build/log/idf_py_stdout_output_19784
[1/12] Building C object esp-idf/receive/CMakeFiles/__idf_receive.dir/receive.c.obj
FAILED: esp-idf/receive/CMakeFiles/__idf_receive.dir/receive.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20240530\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.3.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I"C:/ESP IDF/project_esp/Receive/build/config" -I"C:/ESP IDF/project_esp/Receive/Component/receive/include" -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/config/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/dma/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/ldo/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/port/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/xtensa/deprecated_include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/esp32xx/include/sys -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap "-fmacro-prefix-map=C:/ESP IDF/project_esp/Receive=." -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.3.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/receive/CMakeFiles/__idf_receive.dir/receive.c.obj -MF esp-idf\receive\CMakeFiles\__idf_receive.dir\receive.c.obj.d -o esp-idf/receive/CMakeFiles/__idf_receive.dir/receive.c.obj -c "C:/ESP IDF/project_esp/Receive/Component/receive/receive.c"
C:/ESP IDF/project_esp/Receive/Component/receive/receive.c: In function 'blink_task':
C:/ESP IDF/project_esp/Receive/Component/receive/receive.c:4:5: error: implicit declaration of function 'gpio_pad_select_gpio' [-Werror=implicit-function-declaration]
    4 |     gpio_pad_select_gpio(LED_PIN);
      |     ^~~~~~~~~~~~~~~~~~~~
In file included from C:/ESP IDF/project_esp/Receive/Component/receive/receive.c:1:
C:/ESP IDF/project_esp/Receive/Component/receive/include/receive.h:2:17: error: 'GPIO_NUM_2' undeclared (first use in this function)
    2 | #define LED_PIN GPIO_NUM_2  // Chân D2 trên ESP32
      |                 ^~~~~~~~~~
C:/ESP IDF/project_esp/Receive/Component/receive/receive.c:4:26: note: in expansion of macro 'LED_PIN'
    4 |     gpio_pad_select_gpio(LED_PIN);
      |                          ^~~~~~~
C:/ESP IDF/project_esp/Receive/Component/receive/include/receive.h:2:17: note: each undeclared identifier is reported only once for each function it appears in
    2 | #define LED_PIN GPIO_NUM_2  // Chân D2 trên ESP32
      |                 ^~~~~~~~~~
C:/ESP IDF/project_esp/Receive/Component/receive/receive.c:4:26: note: in expansion of macro 'LED_PIN'
    4 |     gpio_pad_select_gpio(LED_PIN);
      |                          ^~~~~~~
C:/ESP IDF/project_esp/Receive/Component/receive/receive.c:5:5: error: implicit declaration of function 'gpio_set_direction' [-Werror=implicit-function-declaration]
    5 |     gpio_set_direction(LED_PIN, GPIO_MODE_OUTPUT);
      |     ^~~~~~~~~~~~~~~~~~
C:/ESP IDF/project_esp/Receive/Component/receive/receive.c:5:33: error: 'GPIO_MODE_OUTPUT' undeclared (first use in this function)
    5 |     gpio_set_direction(LED_PIN, GPIO_MODE_OUTPUT);
      |                                 ^~~~~~~~~~~~~~~~
C:/ESP IDF/project_esp/Receive/Component/receive/receive.c:9:9: error: implicit declaration of function 'gpio_set_level' [-Werror=implicit-function-declaration]
    9 |         gpio_set_level(LED_PIN, 1);
      |         ^~~~~~~~~~~~~~
C:/ESP IDF/project_esp/Receive/Component/receive/receive.c:10:9: error: implicit declaration of function 'vTaskDelay' [-Werror=implicit-function-declaration]
   10 |         vTaskDelay(500 / portTICK_PERIOD_MS);
      |         ^~~~~~~~~~
C:/ESP IDF/project_esp/Receive/Component/receive/receive.c:10:26: error: 'portTICK_PERIOD_MS' undeclared (first use in this function)
   10 |         vTaskDelay(500 / portTICK_PERIOD_MS);
      |                          ^~~~~~~~~~~~~~~~~~
C:/ESP IDF/project_esp/Receive/Component/receive/receive.c: In function 'app_main':
C:/ESP IDF/project_esp/Receive/Component/receive/receive.c:19:5: error: implicit declaration of function 'xTaskCreate' [-Werror=implicit-function-declaration]
   19 |     xTaskCreate(&blink_task, "blink_task", 1024, NULL, 5, NULL);
      |     ^~~~~~~~~~~
C:/ESP IDF/project_esp/Receive/Component/receive/receive.c:19:50: error: 'NULL' undeclared (first use in this function)
   19 |     xTaskCreate(&blink_task, "blink_task", 1024, NULL, 5, NULL);
      |                                                  ^~~~
C:/ESP IDF/project_esp/Receive/Component/receive/receive.c:2:1: note: 'NULL' is defined in header '<stddef.h>'; did you forget to '#include <stddef.h>'?
    1 | #include "receive.h"
  +++ |+#include <stddef.h>
    2 | 
C:/ESP IDF/project_esp/Receive/Component/receive/include/receive.h: At top level:
C:/ESP IDF/project_esp/Receive/Component/receive/include/receive.h:6:20: warning: 'TAG' defined but not used [-Wunused-variable]
    6 | static const char *TAG = "lora_receive";
      |                    ^~~
cc1.exe: some warnings being treated as errors
[2/12] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D "C:\ESP IDF\project_esp\Receive\build\bootloader\esp-idf\esptool_py" && C:\Espressif\python_env\idf5.3_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.3.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 "C:/ESP IDF/project_esp/Receive/build/bootloader/bootloader.bin""
Bootloader binary size 0x6880 bytes. 0x780 bytes (7%) free.
[3/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/Receive.c.obj
In file included from C:/ESP IDF/project_esp/Receive/main/Receive.c:33:
C:/ESP IDF/project_esp/Receive/Component/receive/include/receive.h:6:20: warning: 'TAG' defined but not used [-Wunused-variable]
    6 | static const char *TAG = "lora_receive";
      |                    ^~~
ninja: build stopped: subcommand failed.
